--- a/styles.css
+++ b/styles.css
@@ -124,18 +124,95 @@ nav .style-light .nav-collapse .nav2 .navicon img {
   width: 100%;
   height: 640px;
   top: 91px;
-  border-radius: 5px;
   border: 1px;
-  gap: 30px;
-  /* background-color: #ff0000; */
+  border-radius: 5px;
+  border-color: #dedede;
+  color: #ffffff;
+  background-image: url("./icons/carousel/batata.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #ff0000;
 }
 
-.carousel h1 {
+.carousel .ctrl-prev {
+  position: absolute;
+  margin-top: 401px;
+  margin-left: 40px;
+}
+
+.carousel .ctrl-nex {
+  position: absolute;
+  margin-top: 401px;
+  margin-left: 1620px;
+}
+
+.carousel .indicators {
+  position: absolute;
+  margin-top: 590px;
+  margin-left: 46.3%;
+}
+
+.carousel .inner {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-block: 0;
 }
 
-footer {
-  /* background-color: aqua; */
+.carousel .inner .item {
+  width: 701px;
+  height: 554px;
+  margin-top: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.carousel .inner .item .row {
+  width: 100%;
+  height: 303px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+
+.carousel .inner .item .row h1 {
+  font-size: 58px;
+  font-weight: 700;
+  line-height: 80px;
+  letter-spacing: 0.2px;
+  text-align: center;
+}
+.carousel .inner .item .row h4 {
+  width: 480px;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0.2px;
+  text-align: center;
+}
+
+.carousel .inner .item .row .btn-car {
+  width: 204px;
+  height: 62px;
+  border: none;
+  border-radius: 5px;
+  background-color: #23a6f0;
+  color: #ffffff;
+  font-family: "Montserrat", sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 32px;
+  letter-spacing: 0.1px;
+  text-align: center;
+}
+
+/* footer {
+  background-color: aqua;
   width: 100%;
   height: 488px;
-}
+} */
