--- a/shop-products.css
+++ b/shop-products.css
@@ -9,7 +9,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(255, 0, 43);
+  background-color: #ffffff;
 }
 
 .shop-product .row {
@@ -19,7 +19,6 @@ main {
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
-  background-color: rgb(47, 0, 255);
 }
 
 .shop-product .row .md {
@@ -64,7 +63,6 @@ main {
 .shop-product .row .lg {
   width: 658px;
   height: 799px;
-  background-color: rgb(255, 255, 255);
 }
 
 .shop-product .row .lg .container {
@@ -75,7 +73,6 @@ main {
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
-  background-color: rgb(0, 255, 0);
 }
 
 .shop-product .row .lg .container .navbar {
@@ -85,7 +82,6 @@ main {
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
-  background-color: #ffffff;
 }
 
 .shop-product .row .lg .container .navbar .main-content {
@@ -116,7 +112,6 @@ main {
   align-items: baseline;
   justify-content: space-between;
   flex-direction: row;
-  background-color: rgb(102, 255, 0);
 }
 
 .shop-product .row .lg .container .navbar .style-light .lista {
@@ -169,6 +164,7 @@ main {
 .shop-product .row .lg .container .linha {
   width: 100%;
   height: 2px;
+  margin-top: -30px;
   border-radius: 50px;
   background-color: #ececec;
 }
@@ -176,5 +172,129 @@ main {
 .shop-product .row .lg .container .corp {
   width: 100%;
   height: 727px;
-  background-color: rgb(255, 251, 0);
+  margin-top: -30px;
+}
+
+.shop-product .row .lg .container .corp .tab-content {
+  width: 658px;
+  height: 727px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.shop-product .row .lg .container .corp .tab-content .tab-one {
+  width: 658px;
+  height: 711px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+}
+
+.shop-product .row .lg .container .corp .tab-content .tab-one .group-cards {
+  width: 609px;
+  height: 324px;
+  gap: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+  text-align: center;
+}
+
+.shop-product
+  .row
+  .lg
+  .container
+  .corp
+  .tab-content
+  .tab-one
+  .group-cards
+  .container-item {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+.shop-product
+  .row
+  .lg
+  .container
+  .corp
+  .tab-content
+  .tab-one
+  .group-cards
+  .container-item
+  .card-item {
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+}
+
+.shop-product
+  .row
+  .lg
+  .container
+  .corp
+  .tab-content
+  .tab-one
+  .group-cards
+  .container-item
+  .card-item
+  .frame-item {
+  width: 100%;
+  height: 163px;
+  gap: 10px;
+  margin-top: -5px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.shop-product
+  .row
+  .lg
+  .container
+  .corp
+  .tab-content
+  .tab-one
+  .group-cards
+  .container-item
+  .card-item
+  .frame-item
+  ul {
+  width: 108px;
+  height: 34px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.shop-product
+  .row
+  .lg
+  .container
+  .corp
+  .tab-content
+  .tab-one
+  .group-cards
+  .container-item
+  .card-item
+  .frame-item
+  h5,
+li,
+a {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.1px;
+  text-align: center;
 }
