--- a/shop-products4.css
+++ b/shop-products4.css
@@ -154,3 +154,129 @@
   text-align: left;
   color: #737373;
 }
+
+/* Segundo MOST POPULAR */
+
+.most-popular {
+  width: 100%;
+  height: 886px;
+  background-color: #ffffff;
+}
+
+.most-popular .container {
+  width: 100%;
+  height: 886px;
+  gap: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.most-popular .container .first-row {
+  width: 1069px;
+  height: 784px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.most-popular .container .first-row .col-md {
+  width: 401px;
+  height: 784px;
+  gap: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #fafafa;
+}
+
+.most-popular .container .first-row .col-md .product-card {
+  width: 348px;
+  height: 604px;
+  gap: 19px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.most-popular .container .first-row .col-md .product-card h5 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 32px;
+  letter-spacing: 0.1px;
+  text-align: center;
+  color: #252b42;
+}
+
+.most-popular .container .first-row .col-md .product-card p {
+  width: 280px;
+  height: 60px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0.2px;
+  text-align: center;
+  color: #737373;
+}
+
+.most-popular .container .first-row .col-md .product-card li a {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  text-align: center;
+  color: #252b42;
+}
+
+.most-popular .container .first-row .col-md .product-card ul {
+  width: 108px;
+  height: 34px;
+  gap: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.most-popular .container .first-row .col-md .product-card .carne-container {
+  width: 348px;
+  height: 300px;
+  margin-top: 40px;
+}
+
+.most-popular .container .first-row .col-md .product-card .selection-colors {
+  width: 82.23px;
+  height: 16px;
+  gap: 6.08px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.most-popular .container .first-row .col-md .product-card .sales {
+  width: 83px;
+  height: 24px;
+  color: #737373;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.most-popular .container .first-row .col-md .product-card .sales h6 {
+  height: 24px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  text-align: left;
+}
+
+.most-popular .container .first-row .col-md .product-card .selection-colors li {
+  border-radius: 100%;
+  width: 16px;
+  height: 16px;
+}
