--- a/styles/blog.css
+++ b/styles/blog.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: blue;
+  background-color: #ffffff;
 }
 
 .blog .container {
@@ -15,7 +15,6 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: brown;
 }
 
 .blog .container .first-row {
@@ -31,7 +30,6 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: rgb(217, 255, 0);
 }
 
 .blog .container .first-row .title-content h6 {
@@ -55,4 +53,191 @@
   width: 1045px;
   height: 606px;
   gap: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.blog .container .second-row .blog-body {
+  width: 328px;
+  height: 606px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.blog .container .second-row .blog-body .content-card {
+  width: 348px;
+  height: 606px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0px 2px 4px 0px #0000001a;
+}
+
+.blog .container .second-row .blog-body .content-card .photograph {
+  width: 348px;
+  height: 300px;
+
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.blog .container .second-row .blog-body .content-card .photograph .tag {
+  width: 56px;
+  height: 24px;
+  margin-top: 20px;
+  margin-left: 20px;
+  padding: 0px, 10px, 0px, 10px;
+  border-radius: 3px;
+  background-color: #e74040;
+  box-shadow: 0px 2px 4px 0px #0000001a;
+}
+
+.blog .container .second-row .blog-body .content-card .photograph .tag h6 {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  text-align: center;
+  color: #ffffff;
+}
+
+.blog .container .second-row .blog-body .content-card .blog-text {
+  width: 348px;
+  height: 306px;
+  gap: 10px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.blog .container .second-row .blog-body .content-card .blog-text ul {
+  width: 160px;
+  height: 16px;
+  gap: 15px;
+  margin-left: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.blog .container .second-row .blog-body .content-card .blog-text small {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0.2px;
+  text-align: left;
+  color: #737373;
+}
+
+.blog .container .second-row .blog-body .content-card .blog-text h4 {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0.2px;
+  margin-left: 25px;
+  text-align: left;
+  color: #252b42;
+}
+
+.blog .container .second-row .blog-body .content-card .blog-text p {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0.2px;
+  margin-left: 25px;
+  text-align: left;
+  color: #737373;
+}
+
+.blog .container .second-row .blog-body .content-card .blog-text a {
+  width: 105px;
+  height: 24px;
+  gap: 10px;
+  margin-left: 25px;
+  list-style-type: none;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.blog .container .second-row .blog-body .content-card .blog-text a h6 {
+  width: 85px;
+  height: 24px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  text-align: left;
+  color: #737373;
+}
+
+.blog .container .second-row .blog-body .content-card .blog-text .text-frame {
+  width: 298px;
+  height: 46px;
+  margin-left: 25px;
+  margin-right: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.blog .container .second-row .blog-body .content-card .blog-text .blog-day {
+  width: 100px;
+  height: 16px;
+  gap: 5px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+
+.blog
+  .container
+  .second-row
+  .blog-body
+  .content-card
+  .blog-text
+  .blog-day
+  .content-img {
+  width: 16px;
+  height: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.blog
+  .container
+  .second-row
+  .blog-body
+  .content-card
+  .blog-text
+  .blog-comments {
+  width: 105.4px;
+  height: 16px;
+  gap: 5px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+
+.blog
+  .container
+  .second-row
+  .blog-body
+  .content-card
+  .blog-text
+  .blog-comments
+  .content-img {
+  width: 16px;
+  height: 14.67px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
