--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,6 @@
 * {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   list-style-type: none;
 }
 
@@ -25,6 +25,11 @@ body {
 header {
   width: 100%;
   height: 731px;
+  background-color: #fafafa;
+}
+
+main {
+  width: 100%;
   background-color: #fafafa;
 }
 
@@ -157,6 +162,7 @@ nav .container .style-light .nav-collapse .nav2 .navicon img {
   margin-left: 700px;
 }
 .carousel .container-indicators .indicators {
+  gap: 1px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -206,14 +212,17 @@ nav .container .style-light .nav-collapse .nav2 .navicon img {
   text-align: center;
 }
 
-.carousel .inner .item .row .btn-car {
+.carousel .inner .item .row button {
   width: 204px;
   height: 62px;
+  cursor: pointer;
   border: none;
   border-radius: 5px;
   background-color: #23a6f0;
+}
+
+.carousel .inner .item .row button h3 {
   color: #ffffff;
-  font-family: "Montserrat", sans-serif;
   font-size: 24px;
   font-weight: 700;
   line-height: 32px;
